Bug 762430 - Fix uninitialized nsresult in nsHTMLEditor::AbsolutelyPositionElement; r=ehsan